--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/node": "^16.18.25",
     "@types/react": "^18.2.5",
     "@types/react-dom": "^18.2.3",
+    "autoprefixer": "^10.4.14",
     "firebase-tools": "^12.2.1",
+    "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -45,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.11.1"
+    "react-router-dom": "^6.11.1",
+    "tailwindcss": "^3.3.2"
   }
 }
