--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@nestjs/cli": "^9.5.0",
+    "@react-icons/all-files": "^4.1.0",
+    "@tanstack/react-query": "^4.29.14",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +20,9 @@
     "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-form-hook": "^0.0.1",
+    "react-hook-form": "^7.44.3",
+    "react-icons": "^4.9.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -47,7 +52,7 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.11.1",
+    "react-router-dom": "^6.13.0",
     "tailwindcss": "^3.3.2"
   }
 }
