--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "react-router-dom": "^6.13.0",
     "tailwindcss": "^3.3.2"
   }
